--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       body {
         font-family: 'Cairo', sans-serif;
       }
-      /* Custom scrollbar for better UX */
       ::-webkit-scrollbar {
         width: 8px;
       }
@@ -25,18 +24,25 @@
         border-radius: 4px;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
-    "firebase/": "https://esm.sh/firebase@^12.8.0/",
+    "react": "https://esm.sh/react@18.2.0",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "firebase/app": "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js",
+    "firebase/auth": "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js",
+    "firebase/firestore": "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
     "react/": "https://esm.sh/react@^19.2.4/",
-    "react": "https://esm.sh/react@^19.2.4",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
+    <!-- هذا السطر هو الأهم لتشغيل التطبيق -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
