--- a/index.html
+++ b/index.html
@@ -12,16 +12,12 @@
     <style>
       body {
         font-family: 'Cairo', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f9fafb;
       }
-      ::-webkit-scrollbar {
-        width: 8px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #f1f1f1;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #3b82f6;
-        border-radius: 4px;
+      #root {
+        min-height: 100vh;
       }
     </style>
     <script type="importmap">
@@ -40,9 +36,8 @@
 }
 </script>
   </head>
-  <body class="bg-gray-50 text-gray-900">
+  <body>
     <div id="root"></div>
-    <!-- هذا السطر هو الأهم لتشغيل التطبيق -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
