--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
       #root {
         min-height: 100vh;
       }
-      /* تحسين مظهر شريط التمرير */
       ::-webkit-scrollbar { width: 8px; }
       ::-webkit-scrollbar-track { background: #f1f1f1; }
       ::-webkit-scrollbar-thumb { background: #3b82f6; border-radius: 4px; }
@@ -34,7 +33,6 @@
     "firebase/auth": "https://esm.sh/firebase@10.8.0/auth",
     "firebase/firestore": "https://esm.sh/firebase@10.8.0/firestore",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
     "firebase/": "https://esm.sh/firebase@^12.8.0/"
   }
 }
@@ -42,6 +40,6 @@
   </head>
   <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
