--- a/index.html
+++ b/index.html
@@ -11,16 +11,10 @@
     <style>
       body {
         font-family: 'Cairo', sans-serif;
+        background-color: #f8fafc;
         margin: 0;
-        padding: 0;
-        background-color: #f9fafb;
       }
-      #root {
-        min-height: 100vh;
-      }
-      ::-webkit-scrollbar { width: 8px; }
-      ::-webkit-scrollbar-track { background: #f1f1f1; }
-      ::-webkit-scrollbar-thumb { background: #3b82f6; border-radius: 4px; }
+      #root { min-height: 100vh; }
     </style>
     <script type="importmap">
 {
@@ -37,8 +31,8 @@
 }
 </script>
   </head>
-  <body class="bg-gray-50 text-gray-900">
+  <body>
     <div id="root"></div>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="index.tsx"></script>
   </body>
 </html>
